@@ -1,3 +1,12 @@
+2004-10-28	blytkerchan
+	* barrier.c: canonicalize arch includes
+	* critical_section.c: ditto
+	* rw_lock.c: ditto
+	* rw_spinlock.c: ditto
+	* semaphore.c: ditto
+	* thread_list.c: ditto
+	* thread_queue.c: ditto
+
 2004-10-19	blytkerchan
 	* rw_spinlock.c (rw_spinlock_downgrade): new function
 	* rw_spinlock.h: ditto
